--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Open+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/146612eae0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header class="header">
-        <section class="banner-section">
-            <div>
-                <h3>All Thinks Are Possible If You believe</h3>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-                <button>Contact Us</button>
-            </div>
-        </section>
-    </header>
-
+    <div class="bannar-container">
+        <div class="banner-details">
+            <h1 class="content-title">All Thinks Are<br/> Possible If You<br/> believe</h1>
+            <p class="content-description">There are many variations of passages of Lorem Ipsum<br/> available, but the majority have suffered alteration in some<br/> form, by injected humour, or randomised words</p>
+            <button class="new-btn">Contact US</button>
+        </div>
+    </div>
     <main>
         <section class="task">
             <img src="images/person.png" alt="">
@@ -28,11 +26,11 @@
                 <h1 class="content-title">My failures of<br/>previous year</h1>
                 <p class="content-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
                 <div class="content-tips">
-                <p>Contrary to popular belief, is not simply.</p>
-                <p>Contrary to popular belief.</p>
-                <p>Contrary to popular , is not simply.</p>
-                <p>Contrary to popular belief, is not simply.</p>
-                <p>Contrary to popular simply.</p>
+                <p><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</p>
+                <p><i class="fa-solid fa-check"></i> Contrary to popular belief.</p>
+                <p><i class="fa-solid fa-check"></i> Contrary to popular , is not simply.</p>
+                <p><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</p>
+                <p><i class="fa-solid fa-check"></i> Contrary to popular simply.</p>
             </div>
             </div>
         </section>
